# gitcoffee

./: Cargo.toml
mattermost/: Cargo.toml
mattermost-core/: Cargo.toml
mattermost-core/src/: lib.rs
mattermost-core/src/data/: mod.rs
mattermost-core/src/modules/: mod.rs
mattermost-http/: Cargo.toml
mattermost-http/src/: lib.rs
mattermost-http/src/api/: mod.rs  user.rs
mattermost-http/src/api/users/: handlers.rs  mod.rs
mattermost-http/src/context/: mod.rs
mattermost/src/: main.rs
