[package]
name = "mattermost-http"
version = "0.1.0"
authors = ["Robin Mattheussen <robin.mattheussen@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.1.0"
futures = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
