[package]
name = "mattermost-http"
version = "0.1.0"
authors = ["Robin Mattheussen <robin.mattheussen@gmail.com>"]
edition = "2018"

[dependencies]
mattermost-core = { path = "../mattermost-core" }

actix-rt = "1.1.1"
actix-web = "3.1.0"
async-trait = "0.1"
futures = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "sqlite" ] }
tokio = { version = "0.2", features = ["full"] }
