[package]
name = "mattermost"
version = "0.1.0"
authors = ["Robin Mattheussen <robin.mattheussen@gmail.com>"]
edition = "2018"

[dependencies]
mattermost-core = { path = "../mattermost-core" }
mattermost-http = { path = "../mattermost-http" }

futures = "0.3.7"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "sqlite" ] }
tokio = { version = "0.2", features = ["full"] }
